dist/manifests/borg-manifests/efk/elasticsearch-curator.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-curator
  namespace: kube-system
  labels:
    k8s-app: es-curator
    boss-part-of: efk

spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: es-curator
  template:
    metadata:
      labels:
        k8s-app: es-curator
    spec:
      containers:
      - name: es-curator
        image: aknudsen/es-curator-service:5.3.0-1
        imagePullPolicy: IfNotPresent
        args: ["--config", "/etc/config/config.yml", "/etc/config/action_file.yml"]
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
        resources:
          limits:
            cpu: ".2"
            memory: 50Mi
          requests:
            cpu: "0.05"
            memory: 20Mi
      volumes:
        - name: config-volume
          secret:
            secretName: curator-config
