dist/manifests/borg-manifests/efk/es-statefulset.yaml
# RBAC authn and authz
---
# Elasticsearch deployment itself
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
        k8s-app: elasticsearch-logging
    version: "v5.6.2"
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
    
spec:
  serviceName: elasticsearch-logging
  # ORIG # replicas: 2
  replicas: 1
  selector:
    matchLabels:
            k8s-app: elasticsearch-logging
    version: v5.6.2
    
    # matchLabels:
    #   k8s-app: elasticsearch-logging
    #  version: v5.6.2
  template:
    metadata:
      labels:
            k8s-app: elasticsearch-logging
    version: v5.6.2
    kubernetes.io/cluster-service: "true"
    
    spec:
      volumes:
      - name: elasticsearch-logging
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
      # SOURCE: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
      # nodeSelector:
      #   kubernetes.io/hostname: "borg-worker-02"
      serviceAccountName: elasticsearch-logging
      containers:
      # - image: k8s.gcr.io/elasticsearch:v5.6.2
      - image: bossjones/elasticsearch:v5.6.2
        imagePullPolicy: Always
        securityContext:
          # runAsNonRoot: true
          # runAsUser: 65534
          privileged: true
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
            memory: 4048Mi
            # memory: 2400Mi
          requests:
            cpu: 100m
            memory: 2350Mi
            # memory: 2350Mi
            # memory: 2000Mi
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        - containerPort: 1099
          name: jmx
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-logging
          mountPath: /data
