dist/manifests/borg-manifests/efk/kibana-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
boss-part-of: efk
k8s-app: kibana-logging
kubernetes.io/cluster-service: 'true'

spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging

  template:
    metadata:
      labels:
        k8s-app: kibana-logging

    spec:
      nodeSelector:
        kubernetes.io/hostname: borg-worker-01

      # SOURCE: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
      containers:
      - name: kibana-logging
        imagePullPolicy: Always
        # image: docker.elastic.co/kibana/kibana:5.6.2
        image: bossjones/kibana:5.6.2
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 1000m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
