dist/manifests/borg-manifests/efk/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
boss-part-of: efk
k8s-app: elasticsearch-logging
kubernetes.io/cluster-service: 'true'
kubernetes.io/name: Elasticsearch

spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
  selector:
    k8s-app: elasticsearch-logging
